# web-scraper-with-python

./: README.md  app_models.py  app_state.py  crawl.py  crawler_service.py  graph_report.py  main.py  pyproject.toml  report.json  resend_email.py  server.py  test_crawl.py
static/: app.js  index.html  styles.css
