[project]
name = "web-scraper-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.12",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.13.4",
    "fastapi==0.115.0",
    "matplotlib==3.9.2",
    "networkx==3.4.2",
    "python-multipart==0.0.12",
    "resend==2.6.0",
    "uvicorn==0.31.0",
    "websockets==13.1",
]
